--- a/index.html
+++ b/index.html
@@ -699,6 +699,8 @@
 					</aside>
 				</section>
 
+
+
 				<section id="Limitations"> 
 					Limitations
 					<hr style="width: 70%; display:flex; justify-content:space-evenly;">
@@ -784,16 +786,22 @@
 					</aside>	
 				</section>
 
-				<section> 
+				<section id="Lung"> 
 					Future Work
 					<hr style="width: 70%; display:flex; justify-content:space-evenly;">
-					<div>
-						<ul style="font-size: 25px;">
-							<li style="padding-top: 14px;">Local mesh adaptation <a href="http://pers.ge.imati.cnr.it/livesu/papers/LMPS16/LMPS16.pdf">(Livesu, CGF 2016)</a></li>
-							<li style="padding-top: 14px;">Improve Sphere Partition</li>
-							<li style="padding-top: 14px;">Further Optimization for Larger Meshes</li>
-							<li style="padding-top: 14px;">Application to Gaseous Simulation in Lungs</li>
-						</ul>
+
+					<div class="r-hstack">
+						<div>
+							<canvas id="Lung_canvas" width="280" height="280"></canvas>
+						</div>
+						<div>
+							<ul style="font-size: 25px;">
+								<li style="padding-top: 14px;">Local mesh adaptation <a href="http://pers.ge.imati.cnr.it/livesu/papers/LMPS16/LMPS16.pdf">(Livesu, CGF 2016)</a></li>
+								<li style="padding-top: 14px;">Improve Sphere Partition</li>
+								<li style="padding-top: 14px;">Further Optimization for Larger Meshes</li>
+								<li style="padding-top: 14px;">Application to Gaseous Simulation in Lungs</li>
+							</ul>
+						</div>
 					</div>
 					<aside class="notes">
 						In spite of already promising results, a number of improvements can still be made to our method.
@@ -931,6 +939,7 @@
 				slide_dinopet_result,
 				slide_horse_result,
 				slide_cycles_result,
+				slide_lung_result,
 				slide_edge_cases,
 			} from './slides.js';
 
@@ -953,7 +962,7 @@
 			slides["Results_Dinopet"] = slide_dinopet_result;
 			slides["Results_Cycles"] = slide_cycles_result;
 			slides["Limitations"] = slide_edge_cases;
-			// slides["Ortho_Partition_3_4"] = slide_3_4_partition;
+			slides["Lung"] = slide_lung_result;
 			
 			let active_slide;
 			Reveal.addEventListener('slidechanged', function(event) {
@@ -1131,6 +1140,9 @@
 				fragment_events["Edge_mech_vol_clip"] = 
 					slides["Limitations"].toggle_mech_vol_clip.bind(slides["Limitations"]);
 			
+				slides["Lung"].init(
+					document.getElementById("Lung_canvas"),
+				);
 			});
 			
 			
