--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<div class="r-hstack">
 								<div>  
 									<img src="Images/Existing/existing0.PNG" height="220px" style="padding-right: 10%; margin: 0px;">
-									<p style="font-size:12px; margin-top: 0px;"><a href="http://www.cs.ubc.ca/labs/imager/tr/2013/polycut/downloads/polycut.pdf">(Livesu, ACM 2013)</a></p>
+									<p style="font-size:12px; margin-top: 0px;"><a href="http://www.cs.ubc.ca/labs/imager/tr/2013/polycut/downloads/polycut.pdf">(Livesu, TOG 2013)</a></p>
 								</div>
 								<div>  
 									<img src="Images/Existing/existing2.PNG" height="220px" style="padding-right: 0%; margin: 0px;">
@@ -170,7 +170,7 @@
 
 					<div class="r-hstack">
 						<p style="font-size:20px; margin-top: 0px; padding-right: 5%;"><a href="http://pers.ge.imati.cnr.it/livesu/papers/LMPS16/LMPS16.pdf">(Livesu, CGF 2016)</a></p>
-						<p style="font-size:20px; margin-top: 0px;"><a href="https://link.springer.com/chapter/10.1007/978-3-319-77066-6_2">(Panatopoulou, Springer 2018)</a></p>
+						<p style="font-size:20px; margin-top: 0px;"><a href="https://link.springer.com/chapter/10.1007/978-3-319-77066-6_2">(Panatopoulou, Research in Shape Analysis 2018)</a></p>
 					</div>
 
 					<aside class="notes">
@@ -594,7 +594,7 @@
 						<div class="r-hstack">
 							<div style="padding-right:2%">  
 								<canvas id="Meta_live" width="340" height="340" ></canvas>
-								<p style="font-size:20px; margin-top: 0px;"><a href="http://pers.ge.imati.cnr.it/livesu/papers/LPPSC20/LPPSC20.pdf">(Livesu, ACM 2020)</a><br>Scaled Jacobian:<br> min:0.682 - avg:0.941<br># Hex: 4544</p>
+								<p style="font-size:20px; margin-top: 0px;"><a href="http://pers.ge.imati.cnr.it/livesu/papers/LPPSC20/LPPSC20.pdf">(Livesu, TOG 2020)</a><br>Scaled Jacobian:<br> min:0.682 - avg:0.941<br># Hex: 4544</p>
 							</div>
 							<div>  
 								<canvas id="Meta_ours" width="340" height="340"></canvas>
@@ -847,7 +847,7 @@
 						I would like to give a special thanks to the team that created hexalab and centralized 
 						articles and results for hexahedral meshing.
 						<br /><br />
-						I will know answer to questions.
+						I will know answer your questions.
 						🖱️
 					</aside>	
 				</section>
