--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 						of an hexahedron compared to a cuboid, values range from -1 to 1, the higher the better and negative values make the mesh unusable for simulation.
 						The important values being the worst and average values.
 						<br /><br />
-						These steps of padding, subdividing, and optimization, require user input in our current setting
+						These steps of padding, subdividing, and optimization, in our current setting are applied by the user
 						, and their number and order will depend on the best judgment of said user. 🖱️
 					</aside>
 				</section>
@@ -847,7 +847,7 @@
 						I would like to give a special thanks to the team that created hexalab and centralized 
 						articles and results for hexahedral meshing.
 						<br /><br />
-						I will know answer your questions.
+						I will now answer your questions.
 						🖱️
 					</aside>	
 				</section>
