--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
 				touch: false, 
 				slideNumber: 'c/t',
 				transition: 'none',
-				showNotes: true,
+				// showNotes: true,
 
 				plugins: [RevealNotes]
 			}).then(() => {
